--- a/interviewHelper/Groups/Web/Storyboard/Web.storyboard
+++ b/interviewHelper/Groups/Web/Storyboard/Web.storyboard
@@ -21,42 +21,46 @@
                                 <rect key="frame" x="0.0" y="100" width="375" height="712"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aXu-JN-Ai4">
-                                <rect key="frame" x="321" y="50" width="34" height="34"/>
+                            <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="zaV-PZ-kKf" customClass="LottieAnimationView" customModule="Lottie">
+                                <rect key="frame" x="152.66666666666666" y="371" width="70" height="70"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="EHs-5w-Z1x"/>
-                                    <constraint firstAttribute="width" constant="34" id="vo0-cu-PQr"/>
+                                    <constraint firstAttribute="width" constant="70" id="NTQ-mj-Usy"/>
+                                    <constraint firstAttribute="height" constant="70" id="y7g-Oy-58D"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="animationName" value="132643-animation"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqr-L7-AQf">
+                                <rect key="frame" x="20" y="50" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="4mG-rb-JGj"/>
+                                    <constraint firstAttribute="height" constant="30" id="ddE-ID-DJ4"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="back"/>
                                 <connections>
-                                    <action selector="closeButtonAction" destination="Y6W-OH-hqX" eventType="touchUpInside" id="W8L-ik-arG"/>
+                                    <action selector="closeButtonAction" destination="Y6W-OH-hqX" eventType="touchUpInside" id="B26-kx-pM6"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zaV-PZ-kKf">
-                                <rect key="frame" x="172.66666666666666" y="391" width="30" height="30"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="NTQ-mj-Usy"/>
-                                    <constraint firstAttribute="height" constant="30" id="y7g-Oy-58D"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="zaV-PZ-kKf" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="4oo-pt-fGA"/>
                             <constraint firstItem="zaV-PZ-kKf" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="A4O-eR-GsB"/>
+                            <constraint firstItem="sqr-L7-AQf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="B8Y-m2-BXM"/>
                             <constraint firstItem="OqN-IB-7X9" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="NY8-q8-gqJ"/>
+                            <constraint firstItem="sqr-L7-AQf" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" constant="50" id="OlD-bo-0tL"/>
                             <constraint firstItem="OqN-IB-7X9" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" constant="100" id="cbC-oR-wDL"/>
                             <constraint firstItem="OqN-IB-7X9" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="fW1-Fy-rid"/>
                             <constraint firstAttribute="bottom" secondItem="OqN-IB-7X9" secondAttribute="bottom" id="fgp-gC-X9F"/>
-                            <constraint firstAttribute="trailing" secondItem="aXu-JN-Ai4" secondAttribute="trailing" constant="20" id="lHs-PK-kSO"/>
-                            <constraint firstItem="aXu-JN-Ai4" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" constant="50" id="mfx-eP-ENp"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="375" height="812"/>
                     <connections>
+                        <outlet property="progressView" destination="zaV-PZ-kKf" id="Zh3-OL-HI0"/>
                         <outlet property="webView" destination="OqN-IB-7X9" id="62P-bR-5wF"/>
                     </connections>
                 </viewController>
